--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=0.75" />
-    <title>Shashank Raj Portfolio</title>
+    <title>M Zubair Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
